# Image-Processor

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
images/: cat.pgm  edges.pgm  edges1.pgm  result.pgm  seaside.pgm
include/: Image.h
src/: Image.cpp  Sobel.cpp
tests/: test_sobel.cpp
